# haydee-ai-outfit-generator

./: .env.example  README.ar.md  README.es.md  README.md  README.ru.md  README.th.md  README.zh.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yml  publish.yml  tests.yml
core/: config.py  gemini_client.py
haydee_outfit_gen/: config.py  gemini_client.py  image_processor.py  main.py  mod_builder.py
tests/: conftest.py  test_config.py  test_gemini_client.py  test_image_processor.py  test_main.py  test_mod_builder.py
